# yewon

./: database.py  main.py  pyproject.toml  test_pdf.py
data/: extracted_text.txt
prompts/: trail_rag.yaml
recommend_agent/: main.py  readme.md  requirements.txt
recommend_agent/templates/: index.html
